<resources>
    <string name="app_name">INFO_STORE_APP</string>
    <string name="name">Name</string>
    <string name="college">College Name</string>
    <string name="field">Field of Interest in Technology</string>
    <string name="hobbies">Hobbies</string>
    <string name="location">Home State</string>
    <string name="title_activity_getdata">Getdata</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>